# diff-tui

./: AGENTS.md  Cargo.toml  LICENSE  README.md  README_ja.md
.github/workflows/: release.yml
src/: app.rs  config.rs  fuzzy.rs  main.rs
src/git/: diff.rs  mod.rs  repository.rs
