[package]
name = "diff-tui"
version = "0.1.1"
edition = "2021"
description = "A terminal-based Git diff viewer with fuzzy search"
license = "MIT"
authors = ["chouxcreams"]
repository = "https://github.com/chouxcreams/diff-tui"
homepage = "https://github.com/chouxcreams/diff-tui"
readme = "README.md"
keywords = ["git", "diff", "tui", "terminal", "cli"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.70"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
git2 = "0.19"
nucleo = "0.5"
ansi-to-tui = "7.0"
anyhow = "1.0"
thiserror = "2.0"
which = "7.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
directories = "5.0"
